# md-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  cfg.cfgconf  closebutton.cpp  closebutton.hpp  color_widget.cpp  color_widget.hpp  colors.cpp  colors.hpp  colors.ui  editor.cpp  editor.hpp  find.cpp  find.hpp  find.ui  findweb.cpp  findweb.hpp  fontdlg.cpp  fontdlg.hpp  fontdlg.ui  gotoline.cpp  gotoline.hpp  gotoline.ui  htmldocument.cpp  htmldocument.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  previewpage.cpp  previewpage.hpp  resources.qrc  syntaxvisitor.cpp  syntaxvisitor.hpp  version.hpp.in  webview.cpp  webview.hpp
src/badge-highlight/: index.mjs  package-lock.json  package.json  tsconfig.json
src/badge-highlight/files/: input.html  output.html
src/badge-highlight/src/: hightlight-blockquote.ts  hightlight.test.ts  hightlight.ts  index.ts  test-input.ts
src/res/: hightlight-blockquote.js  index.html
